# GeoCausality

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  linter.yml  main.yml  python-package.yml
GeoCausality/: __init__.py  _base.py  augmented_synthetic_control.py  causal_impact.py  diff_in_diff.py  elastic_net_synthetic_control.py  fixed_effects.py  generalized_synthetic_control.py  geolift.py  geox.py  interactive_fixed_effects.py  kernel_synthetic_control.py  market_selection.py  matrix_completion.py  nonlinear_synthetic_control.py  penalized_synthetic_control.py  power.py  robust_synthetic_control.py  synthetic_control.py  synthetic_diff_in_diff.py  utils.py
docs/: Makefile  about.rst  api.rst  augmented_synthetic_control.rst  causal_impact.rst  conf.py  diff_in_diff.rst  elastic_net_synthetic_control.rst  fixed_effects.rst  generalized_synthetic_control.rst  geo_x.rst  geolift.rst  index.rst  inference.rst  kernel_synthetic_control.rst  market_selection.rst  matrix_completion.rst  nonlinear_synthetic_control.rst  penalized_synthetic_control.rst  power.rst  quickstart.rst  references.bib  references.rst  requirements.txt  robust_synthetic_control.rst  synthetic_control.rst  synthetic_diff_in_diff.rst
test/: __init__.py  conftest.py  test_bootstrap_sc_estimators.py  test_card_krueger_parity.py  test_causal_impact.py  test_conformal_band.py  test_conformal_inference.py  test_diff_in_diff.py  test_donor_column_order.py  test_elastic_net_synthetic_control.py  test_fixed_effects.py  test_generalized_synthetic_control.py  test_geolift.py  test_geolift_parity.py  test_geox.py  test_germany_parity.py  test_interactive_fixed_effects.py  test_jackknife_fallback.py  test_jackknife_sc_estimators.py  test_market_selection.py  test_matrix_completion.py  test_nonlinear_synthetic_control.py  test_parametric_bootstrap.py  test_power.py  test_prop99_parity.py  test_summarize_degenerate.py  test_synthetic_diff_in_diff.py
test/data/: card_krueger_1994.README.txt  card_krueger_1994.csv  germany_reunification.README.txt  germany_reunification.csv  prop99_smoking.README.txt  prop99_smoking.csv  vendor_card_krueger.py  vendor_germany.py  vendor_prop99.py
