[project]
name = "geocausality"
version = "0.5.0"
description = ""
authors = [
    {name = "ConorMcNamara",email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.23.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "linearmodels (>=6.1,<7.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
