[project]
name = "geocausality"
version = "0.5.0"
description = "Package for analyzing the causal impact of geo-experiments"
authors = [
    {name = "ConorMcNamara",email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "polars (>=1.23.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "linearmodels (>=6.1,<7.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "scipy (>=1.15.0,<2.0.0)"
]
licenses = [
    {text = "MIT", file = "LICENSE"}
]
keywords = ["causal inference", "geo-experiments", "geocausality"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis"
]

[project.optional-dependencies]
dev = [
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)"
]

[project.urls]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["geocausality", '.']

[tool.coverage.run]
source = ["GeoCausality"]
branch = true
omit = ["test/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 120
indent-width = 4

[tool.black.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
no_incremental = true
